fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,149 +1,138 @@
 /*! css reset */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /*! utilities */
-img{
-    width: 100%;
+img {
+  width: 100%;
 }
 
 /* background */
-.background{
-    height: 100vh;
-    background-image: linear-gradient(#009688 15% , #DADBD3 15% , #DADBD3);
-    position: relative;
+.background {
+  height: 100vh;
+  background-image: linear-gradient(#009688 15%, #dadbd3 15%, #dadbd3);
+  position: relative;
 }
-
 
 /* boolzapp  block */
-.boolzapp-block{
-    height: 720px;
-    width: 1200px;
-    margin: 0 auto;
+.boolzapp-block {
+  height: 720px;
+  width: 1200px;
+  margin: 0 auto;
 
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 20px;
-
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 20px;
 }
-
 
 /*! sidebar */
 
-.sidebar{
-    background-color: #FFFFFF;
+.sidebar {
+  background-color: #ffffff;
 }
 
-.sidebar-header, .selected-contact{
-    height: 80px;
-    background-color: #EAEAEA;
-    
+.sidebar-header,
+.selected-contact {
+  height: 80px;
+  background-color: #eaeaea;
 }
-.sidebar-header img{
-    border-radius: 50%;
-    width: 60px;
-}
-
-.notifications{
-    height: 80px;
-    background-color: #8EDAFC;
+.sidebar-header img {
+  border-radius: 50%;
+  width: 60px;
 }
 
-.circle{
-    width: 50px;
-    height: 50px;
-    background-color: white;
-    border-radius: 50%;
-    color: #8EDAFC ;
+.notifications {
+  height: 80px;
+  background-color: #8edafc;
 }
 
-.searchbar{
-    height: 50px;
-    background-color: #EAEAEA;
-    
+.circle {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  color: #8edafc;
 }
 
-.contacts{
-    overflow-y: auto;
+.searchbar {
+  height: 50px;
+  background-color: #eaeaea;
 }
 
-.contacts li{
-    height: 80px;
-    cursor: pointer;
+.contacts {
+  overflow: auto;
 }
 
-.contacts li:hover{
-    background-color: #EAEAEA;
+.contacts li {
+  height: 80px;
+  cursor: pointer;
 }
 
-.contacts img{
-    border-radius: 50%;
-    width: 60px;
+.contacts li:hover {
+  background-color: #eaeaea;
 }
 
-
+.contacts img {
+  border-radius: 50%;
+  width: 60px;
+}
 
 /*! main */
 /* selected contact */
-.selected-contact img{
-    border-radius: 50%;
-    width: 60px;
+.selected-contact img {
+  border-radius: 50%;
+  width: 60px;
 }
 
 /* chat */
-.chat{
-    height: calc(100vh - 200px);
-    background-image: url(img/mine.jpg);
-
+.chat {
+  height: calc(100vh - 200px);
+  background-image: url(img/mine.jpg);
+  overflow: auto;
 }
 
-.message-container{
-    padding: 15px;
-    border-radius: 10px;
-    margin: 15px 0;
+.message-container {
+  padding: 15px;
+  border-radius: 10px;
+  margin: 15px 0;
 
-    display: flex;
-    
+  display: flex;
 }
 
-.message-container.sent{
-    background-color: #D5F9BA;
-    justify-content: flex-end;
-
-    
+.message-container.sent {
+  background-color: #d5f9ba;
+  justify-content: flex-end;
 }
 
-.message-container.received{
-    background-color: #FFFFFF;
-    justify-content: start;
+.message-container.received {
+  background-color: #ffffff;
+  justify-content: start;
 }
 
-
-
-.sent .message p{
-    display: flex;
-    justify-content: flex-end;
+.sent .message p {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.received .message p{
-    justify-content: flex-start;
+.received .message p {
+  justify-content: flex-start;
 }
 
-.message p{
-    font-size: 12px;
-    color: grey;
+.message p {
+  font-size: 12px;
+  color: grey;
 }
 
 /* input chat */
-.input-chat{
-    height: 80px;
-    background-color: #EAEAEA;
+.input-chat {
+  height: 80px;
+  background-color: #eaeaea;
 }
 
-.input-chat .form-control{
-    padding: 1rem ;
+.input-chat .form-control {
+  padding: 1rem;
 }
